[package]
name = "leet"
version = "0.1.0"
edition = "2024"

[lib]
bench = false

[[bin]]
name = "leet"
path = "src/main.rs"
bench = false

[dependencies]
itertools = "0.14.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "reduce_steps"
harness = false

[[bench]]
name = "robot_sim_874"
harness = false

[lints.rust]
warnings = "deny"
